<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edimaudo.businessapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:src="@drawable/salon"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/salon_name"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:paddingTop="8dp"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/salon_type"
        android:textStyle="italic"
        android:textSize="24sp"
        android:paddingTop="0dp"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:fontFamily="cursive"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/salon_location"
        android:textSize="16sp"
        android:textAlignment="center"
        android:paddingTop="16dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/telephone_num"
        android:textSize="16sp"
        android:textAlignment="center"
        android:paddingTop="8dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/salon_hours"
        android:paddingLeft="72dp"
        android:paddingTop="8dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/monday"
        android:paddingLeft="72dp"
        android:textColor="@color/colorAccent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tuesday"
        android:paddingLeft="72dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/wednesday"
        android:paddingLeft="72dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/thursday"
        android:paddingLeft="72dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/friday"
        android:paddingLeft="72dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/saturday"
        android:paddingLeft="72dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/thursday"
        android:paddingLeft="72dp"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="32dp"

        />

</LinearLayout>


